update to create css on first run

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     <div class="content-wrapper">
       <section id="intro">
         <div class="container">
-          <h1>Oops! That we couldn't find that page.</h1>
-          <p>Here's a cool WEBGL effect to distract you from this discrepency</p>
+          <h1>Cool THREE.JS, bro</h1>
+          <p>Render it again?</p>
         </div>
       </section>
     </div>
