--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,12 @@
       </section>
     </div>
   </body>
+  <!-- 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/ScrollTrigger.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r118/three.min.js"></script>
-  <script src="./vendor/threejs/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r118/three.min.js"></script>
   <script src="./vendor/threejs/GLTFLoader.js"></script>
-  <script src="./main.js"></script> -->
+-->
+  <script src="./vendor/threejs/three.min.js"></script>
+  <script src="./main.js"></script>
 </html>
