updated folder names

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r118/three.min.js"></script>
   <script src="./vendor/threejs/GLTFLoader.js"></script>
 -->
-  <script src="./vendor/threejs/three.min.js"></script>
+  <script src="./lib/threejs/three.min.js"></script>
   <script src="./main.js"></script>
 </html>
